<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".presentation.DetailsFragment">

    <ImageView
        android:id="@+id/imageViewdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/imagen_link"
        android:src="@drawable/baseline_hail_24"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewPoder"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/poder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageViewdetails"
        app:layout_constraintTop_toBottomOf="@+id/imageViewdetails" />

    <TextView
        android:id="@+id/textViewcolor"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/color"
        app:layout_constraintEnd_toEndOf="@+id/textViewPoder"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textViewPoder"
        app:layout_constraintTop_toBottomOf="@+id/textViewPoder"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textViewtraduccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/traduccion"
        app:layout_constraintEnd_toEndOf="@+id/textViewcolor"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/textViewcolor"
        app:layout_constraintTop_toBottomOf="@+id/textViewcolor" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_mail_24"
        app:backgroundTint="@color/accent_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>