<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintItem"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewid"
        android:layout_width="280dp"
        android:layout_height="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewTerreno"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/imagen_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/name_heroe"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/imageViewTerreno"
                app:layout_constraintStart_toStartOf="@+id/imageViewTerreno"
                app:layout_constraintTop_toBottomOf="@+id/imageViewTerreno" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/origen"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewName"
                app:layout_constraintStart_toStartOf="@+id/textViewName"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>